# pixcall-tagger

./: README.md  package-lock.json  package.json
src/: App.vue  Frame.vue  api.ts  api_interface.ts  main.ts  shims-dialog.d.ts  tagset.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: defalut.json
src-tauri/src/: aitagger.rs  db.rs  download.rs  lib.rs  main.rs
