[package]
name = "pixcall-auto-tagger"
version = "0.1.0"
description = "A Tauri App"
authors = ["kankan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pixcall_auto_tagger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = { version = "2.0.0-rc.10", features = ["directml"] }
image = "0.25.6"
ndarray = { version = "0.16.1", features = ["rayon"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
chrono = "0.4.31"
rand = "0.8.5"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
rayon = "1.10.0"
tauri-plugin-fs = "2"
reqwest = "0.12.20"
tauri-plugin-store = "2"
